# Search-Engine

./: AVLTree.h  Article.cpp  Article.h  CMakeLists.txt  DataStructure_Tests.cpp  Document_parser.cpp  Document_parser.h  Query_processor.cpp  Query_processor.h  Relevancy_ranking.cpp  Relevancy_ranking.h  User_interface.cpp  User_interface.h  main.cpp
